# -

./: .cursorignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SKILL.md  debug_dropped.json  debug_filter.json  demo-bank.sh  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt  start-web.sh  start.bat  start.command
.claude/: launch.json  settings.local.json
.github/workflows/: tests.yml
assets/: schema.md
config/: company_aliases.yaml
docs/: CORPUS_SYNC.md  GETTING_STARTED.md  PROJECT_OPTIMIZATION.md
examples/: sample_raw_posts.json  sample_resume.txt
interview_radar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
references/: role_taxonomy.md
scripts/: __init__.py  agent_handoff.py  config.py  doctor.py  models.py  resume_extract.py  run.py  run_jobs.py  service.py
tests/: test_agent_handoff.py  test_api.py  test_api_service.py  test_bank_cache.py  test_boss_cdp_connector.py  test_classify.py  test_clusters.py  test_company_catalog.py  test_company_normalize.py  test_config.py  test_connectors.py  test_corpus.py  test_corpus_sync.py  test_daily_scrape.py  test_dedupe_rank.py  test_discover_nowcoder.py  test_doctor.py  test_export_personalize.py  test_extract_questions.py  test_full_scrape.py  test_github_connector.py  test_group.py  test_ingest_fallback.py  test_interview_link.py  test_job_connectors.py  test_job_enrich.py  test_job_posted_at.py  test_job_pro_connector.py  test_jobs.py  test_jobs_api.py  test_jobs_service.py  test_local_assets.py  test_mediacrawler_driver.py  test_merged_role_bundle.py  test_models.py  test_net_retry.py  test_normalize_xhs.py  test_nowcoder_connector.py  test_nowcoder_detail.py  test_nowcoder_moments.py  (+23 more)
(+129 files in other folders)
