[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-radar"
version = "0.2.0"
description = "Turn real interview posts (NowCoder + Xiaohongshu) and your resume into a personalized prep package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Kun Chen" }]
keywords = ["interview", "nowcoder", "xiaohongshu", "resume", "career"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
]
dependencies = [
  "pyyaml>=6.0.1",
  "pypdf>=4.3.1",
  "requests>=2.32.3",
  "rapidfuzz>=3.0.0",
  "beautifulsoup4>=4.12.3",
  "rapidocr>=3.8.1",
  "onnxruntime>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.2"]
boss-cdp = ["websocket-client>=1.8.0"]
xhs = ["PyExecJS>=1.5.1", "loguru>=0.7.0", "python-dotenv>=1.0.0", "retry>=0.9.2"]
xhs-browser = ["playwright>=1.46.0"]

[project.scripts]
interview-radar = "scripts.run:main"
interview-radar-web = "scripts.api.server:main"
interview-radar-doctor = "scripts.doctor:main"
interview-radar-jobs = "scripts.run_jobs:main"

[project.urls]
Homepage = "https://github.com/Nikka-ops/interview-radar"
Repository = "https://github.com/Nikka-ops/interview-radar"
Issues = "https://github.com/Nikka-ops/interview-radar/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
